deploy/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplified-onboarding
spec:
  ingressClassName: nginx
  rules:
    - host: simplified-onboarding.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: simplified-onboarding
                port:
                  number: 3000
            path: /
            pathType: Prefix
